--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     .p4 { top: 120px; left: 20px; }
     .p5 { top: 120px; right: 20px; }
     .p6 { bottom: 20px; left: 90px; }
+    .p7 { bottom: 20px; right: 90px; }
 
     .center {
         position: absolute;
@@ -190,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
